--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ build_external_project(
     ${PKG_REPOS}
     SIZE
     ${PKG_LAST_INDEX}
-    )
+)
 
 list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_INSTALL_PREFIX})
 
@@ -24,20 +24,20 @@ find_package(Catch2 REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE sioclient::sioclient)
 target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2WithMain)
 
-load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_SOURCE_DIR)
-list(APPEND CMAKE_MODULE_PATH ${EXTERNAL_CATCH2_SOURCE_DIR}/extras)
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ catch2_SOURCE_DIR)
+list(APPEND CMAKE_MODULE_PATH ${EXTERNAL_catch2_SOURCE_DIR}/extras)
 include(Catch)
 catch_discover_tests(${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME}
-        RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-                CONFIGURATIONS Debug Release
-                DESTINATION ${CMAKE_INSTALL_BINDIR}
-                COMPONENT Runtime
-        PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-                       COMPONENT PrivateHeader
-        PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                      COMPONENT PublicHeader
-                      DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        )
+    RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    CONFIGURATIONS Debug Release
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT Runtime
+    PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    COMPONENT PrivateHeader
+    PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
+    COMPONENT PublicHeader
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
