--- a/include/base/CMakeLists.txt
+++ b/include/base/CMakeLists.txt
@@ -10,19 +10,22 @@ target_include_directories(
     base PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}
     )
 
-install(TARGETS base
-        RUNTIME PERMISSIONS WORLD_READ OWNER_WRITE OWNER_EXECUTE
-                CONFIGURATIONS "Debug" "Release"
-                DESTINATION ${CMAKE_INSTALL_BINDIR}
-                COMPONENT Runtime
-        ARCHIVE PERMISSIONS WORLD_READ OWNER_WRITE OWNER_EXECUTE
-                CONFIGURATIONS "Debug" "Release"
-                DESTINATION ${CMAKE_INSTALL_LIBDIR}
-                COMPONENT Development
-        PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-                       COMPONENT PrivateHeader
-        PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                      COMPONENT PublicHeader
-                      DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        )
+install(
+    TARGETS base
+    RUNTIME PERMISSIONS WORLD_READ OWNER_WRITE OWNER_EXECUTE
+            CONFIGURATIONS "Debug" "Release"
+            DESTINATION ${CMAKE_INSTALL_BINDIR}
+            COMPONENT Runtime
+    ARCHIVE PERMISSIONS WORLD_READ OWNER_WRITE OWNER_EXECUTE
+            CONFIGURATIONS "Debug" "Release"
+            DESTINATION ${CMAKE_INSTALL_LIBDIR}
+            COMPONENT Development
+    PRIVATE_HEADER
+        PERMISSIONS WORLD_READ OWNER_WRITE
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+        COMPONENT PrivateHeader
+    PUBLIC_HEADER
+        PERMISSIONS WORLD_READ OWNER_WRITE
+        COMPONENT PublicHeader
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    )
