--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,15 +27,18 @@ list(APPEND CMAKE_MODULE_PATH ${EXTERNAL_catch2_SOURCE_DIR}/extras)
 include(Catch)
 catch_discover_tests(${PROJECT_NAME})
 
-install(TARGETS ${PROJECT_NAME}
-        RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-                CONFIGURATIONS Debug Release
-                DESTINATION ${CMAKE_INSTALL_BINDIR}
-                COMPONENT Runtime
-        PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-                       COMPONENT PrivateHeader
-        PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-                      COMPONENT PublicHeader
-                      DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        )
+install(
+    TARGETS ${PROJECT_NAME}
+    RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+            CONFIGURATIONS Debug Release
+            DESTINATION ${CMAKE_INSTALL_BINDIR}
+            COMPONENT Runtime
+    PRIVATE_HEADER
+        PERMISSIONS WORLD_READ OWNER_WRITE
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+        COMPONENT PrivateHeader
+    PUBLIC_HEADER
+        PERMISSIONS WORLD_READ OWNER_WRITE
+        COMPONENT PublicHeader
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    )
