--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,25 @@ jobs:
         run: make config-ubuntu
       - name: Build Project
         run: cmake --workflow --preset=ubuntu
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: install-product
+          path: out/install/ubuntu
+  execute:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: install-product
+      - name: Check directory
+        run: ls
+      - name: Run app
+        run: ./bin/app
+      - name: Run test
+        run: ./bin/Catch-test
+
       # - name: Ctest
       #   run: ctest --preset=ubuntu
       # - name: Deploy to GitHub Pages
