--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ on:
       - "./Makefile"
       - "**/CMakePresets.json"
       - "**.py"
+      - ".github/workflow/**"
 jobs:
   configure-and-build:
     runs-on: ubuntu-22.04
