--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
           path: out/install/ubuntu
   execute:
     runs-on: ubuntu-latest
+    needs: configure-and-build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
