--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: install-product
-          path: out/install/ubuntu
+          path: out/install/ubuntu/**
   execute:
     runs-on: ubuntu-latest
     needs: configure-and-build
