--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: install-product
           path: out/install/ubuntu/**
-  execute:
+  execute-app:
     runs-on: ubuntu-latest
     needs: configure-and-build
     steps:
@@ -51,6 +51,17 @@ jobs:
         run: ls
       - name: Run app
         run: ./bin/app
+
+  execute-test:
+    runs-on: ubuntu-latest
+    needs: configure-and-build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: install-product
+      - name: Check directory
+        run: ls
       - name: Run test
         run: ./bin/Catch-test
 
