--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,16 +29,9 @@ catch_discover_tests(${PROJECT_NAME})
 
 install(
     TARGETS ${PROJECT_NAME}
-    RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-            CONFIGURATIONS Debug Release
+    RUNTIME CONFIGURATIONS Debug Release
             DESTINATION ${CMAKE_INSTALL_BINDIR}
             COMPONENT Runtime
-    PRIVATE_HEADER
-        PERMISSIONS WORLD_READ OWNER_WRITE
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-        COMPONENT PrivateHeader
-    PUBLIC_HEADER
-        PERMISSIONS WORLD_READ OWNER_WRITE
-        COMPONENT PublicHeader
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PrivateHeader
+    PUBLIC_HEADER COMPONENT PublicHeader DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     )
