--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: update & install deps
         run: |
+          sudo apt update
+          sudo apt upgrade
           sudo apt-get install gcc g++ gdb
           sudo apt-get install make cmake
           sudo apt-get install git doxygen
