--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,17 @@ jobs:
     outputs:
       config_files: ${{ steps.publish.outputs.config_files }}
     steps:
-      - name: update & install deps
-        run: |
-          sudo apt update
-          sudo apt upgrade
-          sudo apt-get install gcc g++ gdb
-          sudo apt-get install make cmake
-          sudo apt-get install git doxygen
-          sudo apt-get install python3 python3-pip
-          pip install cmake-format
-          pip install ninja
-          sudo apt-get install graphviz pkg-config
+      # - name: update & install deps
+      #   run: |
+      #     sudo apt update
+      #     sudo apt upgrade
+      #     sudo apt-get install gcc g++ gdb
+      #     sudo apt-get install make cmake
+      #     sudo apt-get install git doxygen
+      #     sudo apt-get install python3 python3-pip
+      #     pip install cmake-format
+      #     pip install ninja
+      #     sudo apt-get install graphviz pkg-config
       - name: Checkout
         uses: actions/checkout@v4.1.2
       - name: Configure Project
