--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Test project on push to main
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -18,8 +19,6 @@ on:
 jobs:
   configure-and-build:
     runs-on: ubuntu-22.04
-    outputs:
-      config_files: ${{ steps.publish.outputs.config_files }}
     steps:
       - name: update & install deps
         run: |
@@ -36,58 +35,12 @@ jobs:
         run: make config-ubuntu
       - name: Build Project
         run: cmake --workflow --preset=ubuntu
-      - name: Publish
-        id: publish
-        run: find out/install/ubuntu/external/lib/cmake/Catch2/*.cmake -type f -execdir echo 'config_files={}' >> $GITHUB_OUTPUT ';'
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: install-product
-          path: out/install/ubuntu/**
-  execute-app:
-    runs-on: ubuntu-latest
-    needs: configure-and-build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: install-product
-      - name: test output
-        run: echo '${{ needs.configure-and-build.outputs.config_files }}'
-      - name: Check directory
-        run: ls
-      - name: Run app
+      - name: Authen
         run: |
-          cd ./bin
-          chmod a+x app
+          cd out/install/ubuntu/bin
+          chmod a+x app Catch-test
           export LD_LIBRARY_PATH=$PWD/../lib
-          ./app
-
-  execute-test:
-    runs-on: ubuntu-latest
-    needs: configure-and-build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: install-product
-      - name: test output
-        run: echo '${{ needs.configure-and-build.outputs.config_files }}'
-      - name: Check directory
-        run: ls
       - name: Run test
-        run: |
-          cd ./bin
-          chmod a+x Catch-test
-          export LD_LIBRARY_PATH=$PWD/../lib
-          ./Catch-test
-
-      # - name: Ctest
-      #   run: ctest --preset=ubuntu
-      # - name: Deploy to GitHub Pages
-      #   uses: Cecilapp/GitHub-Pages-deploy@v3
-      #   env:
-      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #       email: duyleduc123@gmail.com
-      #       build_dir: ./docs/html
+        run: ./Catch-test
+      - name: Run app
+        run: ./app
