--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,10 @@ jobs:
         run: make config-ubuntu
       - name: Build Project
         run: cmake --workflow --preset=ubuntu
-      - name: Authen
+      - name: Authen and Execution
         run: |
           cd out/install/ubuntu/bin
           chmod a+x app Catch-test
           export LD_LIBRARY_PATH=$PWD/../lib
-      - name: Run test
-        run: ./Catch-test
-      - name: Run app
-        run: ./app
+          ./Catch-test
+          ./app
