--- a/.github/workflows/outputs.yml
+++ b/.github/workflows/outputs.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4.1.2
       - name: Publish
         id: publish
-        run: find cmake/*.cmake -type f -execdir echo 'config_files={}' >> $GITHUB_OUTPUT ';'
+        run: find cmake/*.cmake -type f -exec echo 'config_files={}' >> $GITHUB_OUTPUT ';'
   Express_ouput:
     runs-on: ubuntu-latest
     needs: Publish_output
