--- a/.github/workflows/upload-download-artifact.yml
+++ b/.github/workflows/upload-download-artifact.yml
@@ -19,5 +19,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: product
+          path: cmake
       - name: Check a result
         run: ls
