--- a/.github/workflows/upload-download-artifact.yml
+++ b/.github/workflows/upload-download-artifact.yml
@@ -14,6 +14,7 @@ jobs:
           path: cmake
   Download:
     runs-on: ubuntu-latest
+    needs: Upload
     steps:
       - name: Download
         uses: actions/download-artifact@v3
