--- a/.github/workflows/outputs.yml
+++ b/.github/workflows/outputs.yml
@@ -6,12 +6,16 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       tool_files: ${{steps.publish.outputs.tool_files}}
+    env:
+      EVENT_DETAIL: ${{ github.event }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.2
       - name: Publish
         id: publish
         run: find cmake/*.cmake -type f -exec echo 'tool_files={}' >> $GITHUB_OUTPUT ';'
+      - name: Check event
+        run: echo "$EVENT_DETAIL"
   Express_ouput:
     runs-on: ubuntu-latest
     needs: Publish_output
