--- a/.github/workflows/outputs.yml
+++ b/.github/workflows/outputs.yml
@@ -7,7 +7,7 @@ jobs:
     outputs:
       tool_files: ${{steps.publish.outputs.tool_files}}
     env:
-      EVENT_DETAIL: ${{ github.event }}
+      EVENT_NAME: ${{ github.event_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.2
@@ -15,7 +15,9 @@ jobs:
         id: publish
         run: find cmake/*.cmake -type f -exec echo 'tool_files={}' >> $GITHUB_OUTPUT ';'
       - name: Check event
-        run: echo "$EVENT_DETAIL"
+        run: |
+          echo "$EVENT_NAME"
+          echo "${{ github.event_name }}"
   Express_ouput:
     runs-on: ubuntu-latest
     needs: Publish_output
