--- a/.github/workflows/outputs.yml
+++ b/.github/workflows/outputs.yml
@@ -5,7 +5,7 @@ jobs:
   Publish_output:
     runs-on: ubuntu-latest
     env:
-      EVENT_DETAIL: ${{github.event_name}}
+      EVENT_DETAIL: ${{toJson(github.event)}}
     outputs:
       tool_files: ${{steps.publish.outputs.tool_files}}
     steps:
@@ -17,8 +17,6 @@ jobs:
       - name: Check event
         run: |
           echo "$EVENT_DETAIL"
-          echo "${{github.event}}"
-          echo "${{github}}"
   Express_ouput:
     runs-on: ubuntu-latest
     needs: Publish_output
