--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Publish
         id: publish
         run: find cmake/*.cmake -type f -exec echo 'tool_files={}' >> $GITHUB_OUTPUT ';'
+      - name: print Github
+        run: |
+          echo "${{toJson(github)}}"
       - name: Check event
         run: |
           echo "$EVENT_DETAIL"
