--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -22,7 +22,7 @@ jobs:
           echo "$EVENT_DETAIL"
   Express_ouput:
     runs-on: ubuntu-latest
-    if: ${{github.event.sender.site_admin}}
+    if: ${{github.event.sender.login}} == "leducduy520"
     needs: Publish_output
     steps:
       - name: Print
