--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,11 @@
     "cmake.configureOnEdit": false,
     "cmake.loggingLevel": "info",
     "cmake.useCMakePresets": "always",
-    "yaml.format.enable": true,
     "[yaml]": {
         "editor.insertSpaces": true,
         "editor.tabSize": 2,
-        "editor.autoIndent": "keep",
+        "editor.autoIndent": "none",
+        "editor.defaultFormatter": "redhat.vscode-yaml",
         "diffEditor.ignoreTrimWhitespace": false,
         "editor.quickSuggestions": {
             "other": true,
