--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,8 +7,18 @@ target_link_libraries(${PROJECT_NAME} PRIVATE base)
 install(
     TARGETS ${PROJECT_NAME}
     RUNTIME CONFIGURATIONS Debug Release
-            DESTINATION ${CMAKE_INSTALL_BINDIR}
-            COMPONENT Runtime
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT Runtime
     PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PrivateHeader
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PublicHeader
+)
+
+if(ENABLE_MOVE_DOCS_TO_INSTALL)
+    add_custom_command(
+        TARGET app
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${DOCS_DIR}/html ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DOCDIR}
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        VERBATIM USES_TERMINAL
     )
+endif()
