--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,16 @@ jobs:
       - name: Configure Project
         run: make config-ubuntu
       - name: Build Project
-        run: cmake --workflow --preset=ubuntu
+        id: build
+        run: cmake --build --preset=ubuntu
+      - name: Format cmake files
+        run: cmake --build --preset=ubuntu-format
+      - name: Generating docs
+        id: docs_gen
+        run: cmake --build --preset=ubuntu-docs
+      - name: Installing project
+        if: ${{always() && steps.build.conclusion.success}}
+        run: cmake --build --preset=ubuntu-install
       - name: Authen and Execution
         run: |
           cd out/install/ubuntu/bin
