--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,13 +2,13 @@ project(app)
 
 add_executable(${PROJECT_NAME} app.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE base)
+target_link_libraries(${PROJECT_NAME} PRIVATE bases)
 
 install(
-    TARGETS ${PROJECT_NAME}
-    RUNTIME CONFIGURATIONS Debug Release
-            DESTINATION ${CMAKE_INSTALL_BINDIR}
-            COMPONENT Runtime
-    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PrivateHeader
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PublicHeader
-    )
+        TARGETS ${PROJECT_NAME}
+        RUNTIME CONFIGURATIONS Debug Release
+        DESTINATION ${CMAKE_INSTALL_BINDIR}
+        COMPONENT Runtime
+        PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PrivateHeader
+        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PublicHeader
+)
