--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,20 +39,18 @@ jobs:
         run: cmake --build --preset=ubuntu
       - name: Format cmake files
         continue-on-error: true
-        if: ${{!cancelled()}} && ${{steps.config.conclusion.success}}
+        if: ${{!cancelled() && steps.config.conclusion.success}}
         run: cmake --build --preset=ubuntu-format
       - name: Generating docs
-        id: docs_gen
-        if: ${{!cancelled()}} && ${{steps.config.conclusion.success}}
+        continue-on-error: true
+        if: ${{!cancelled() && steps.config.conclusion.success}}
         run: cmake --build --preset=ubuntu-docs
       - name: Installing project
         id: install
         if: ${{steps.build.outcome.success}}
         run: |
           cmake --build --preset=ubuntu-install
-          echo "install_success=1" >> "$GITHUB_OUTPUT"
       - name: Authen and Execution
-        if: ${{steps.install.outputs.install_success == '1' }}
         run: |
           cd out/install/ubuntu/bin
           chmod a+x app Catch-test
@@ -60,7 +58,6 @@ jobs:
           ./Catch-test
           ./app
       - name: Upload artifact
-        if: ${{steps.install.outputs.install_success == '1' }}
         uses: actions/upload-artifact@v3
         with:
           name: app
