--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,9 @@ jobs:
         if: ${{steps.build.outcome.success}}
         run: |
           cmake --build --preset=ubuntu-install
-          echo "install_success=1" >> "$GITHUB_OUTPUT"
+          echo "install_success=10" >> "$GITHUB_OUTPUT"
       - name: Authen and Execution
-        if: ${{steps.install.outputs.install_success}} == 1
+        if: ${{steps.install.outputs.install_success}} == "10"
         run: |
           cd out/install/ubuntu/bin
           chmod a+x app Catch-test
