test with always

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,11 @@ jobs:
         run: cmake --build --preset=ubuntu
       - name: Format cmake files
         continue-on-error: true
-        if: ${{steps.config.outcome.success}}
+        if: ${{always()}}
         run: cmake --build --preset=ubuntu-format
       - name: Generating docs
         continue-on-error: true
-        if: ${{steps.config.outcome.success}}
+        if: ${{always()}}
         run: cmake --build --preset=ubuntu-docs
       - name: Installing project
         id: install
