--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -2,28 +2,17 @@ name: Outputs test
 on:
   workflow_dispatch:
 jobs:
-  Publish_output:
+  Create-Output:
     runs-on: ubuntu-latest
-    env:
-      EVENT_DETAIL: ${{toJson(github.event)}}
     outputs:
-      tool_files: ${{steps.publish.outputs.tool_files}}
+      duylove: ${{steps.save.outputs.mylove}}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.2
-      - name: Publish
-        id: publish
-        run: find cmake/*.cmake -type f -exec echo 'tool_files={}' >> $GITHUB_OUTPUT ';'
-      - name: print Github
-        run: |
-          echo "${{toJson(github)}}"
-      - name: Check event
-        run: |
-          echo "$EVENT_DETAIL"
-  Express_ouput:
+      - name: save value to output
+        id: save
+        run: echo "mylove=A" >> $GITHUB_OUTPUT
+  Read-Output:
     runs-on: ubuntu-latest
-    if: ${{github.event.sender.login}} == "leducduy520"
-    needs: Publish_output
+    needs: Create-Output
     steps:
-      - name: Print
-        run: echo 'tool files are ${{needs.Publish_output.outputs.tool_files}}'
+      - name: print previous job's output value
+        run: echo "Duy's love is ${{needs.Create-Output.outputs.duylove}}"
