--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -1,6 +1,8 @@
 name: Outputs test
 on:
   workflow_dispatch:
+env:
+  WORKFLOW_ENV: duyleduc520
 jobs:
   Create-Output:
     runs-on: ubuntu-latest
@@ -16,3 +18,16 @@ jobs:
     steps:
       - name: print previous job's output value
         run: echo "Duy's love is ${{needs.Create-Output.outputs.duylove}}"
+  Read-Secret-Env:
+    runs-on: ubuntu-latest
+    env:
+      JOB_ENV: tta_in_my_heart
+    steps:
+      - name: Print DUY_SECRET_NAME
+        run: |
+          echo "DUY_SECRET_NAME ${{secrets.DUY_SECRET_NAME}}" > ${{secrets.DUY_SECRET_NAME}}.txt
+          cat ${{secrets.DUY_SECRET_NAME}}.txt
+      - name: Print workflow env var
+        run: echo "${{env.WORKFLOW_ENV}}"
+      - name: Print job env var
+        run: echo "${{env.JOB_ENV}}"
