--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -25,8 +25,8 @@ jobs:
     steps:
       - name: Print DUY_SECRET_NAME
         run: |
-          echo "DUY_SECRET_NAME ${{secrets.DUY_SECRET_NAME}}" > ${{secrets.DUY_SECRET_NAME}}.txt
-          cat ${{secrets.DUY_SECRET_NAME}}.txt
+          $(echo "DUY_SECRET_NAME ${{secrets.DUY_SECRET_NAME}}") > abc.txt
+          cat abc.txt
       - name: Print workflow env var
         run: echo "${{env.WORKFLOW_ENV}}"
       - name: Print job env var
