--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -24,9 +24,7 @@ jobs:
       JOB_ENV: tta_in_my_heart
     steps:
       - name: Print DUY_SECRET_NAME
-        run: |
-          $(echo "DUY_SECRET_NAME ${{secrets.DUY_SECRET_NAME}}") > abc.txt
-          cat abc.txt
+        run: echo "${{secrets.DUY_SECRET_NAME}}"
       - name: Print workflow env var
         run: echo "${{env.WORKFLOW_ENV}}"
       - name: Print job env var
