--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -1,6 +1,12 @@
 name: Outputs test
 on:
   workflow_dispatch:
+    inputs:
+      hello:
+        description: "Input a name"
+        required: true
+        default: "duyld"
+        type: string
 env:
   WORKFLOW_ENV: duyleduc520
 jobs:
@@ -28,4 +34,16 @@ jobs:
       - name: Print workflow env var
         run: echo "${{env.WORKFLOW_ENV}}"
       - name: Print job env var
-        run: echo "${{env.JOB_ENV}}"
+        run: echo "$JOB_ENV"
+  Read-Environment-Secret:
+    runs-on: ubuntu-latest
+    environment: testing
+    steps:
+      - name: Print
+        run: echo "${{secrets.TEST_SECRET}}"
+  If-and-Input:
+    runs-on: ubuntu-latest
+    if: ${{github.event.sender.name == 'leducduy520'}}
+    steps:
+      - name: Print string input
+        run: echo "${{inputs.hello}}"
