--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -43,7 +43,8 @@ jobs:
         run: echo "${{secrets.TEST_SECRET}}"
   If-and-Input:
     runs-on: ubuntu-latest
-    if: ${{github.event.sender.name == 'leducduy520'}}
     steps:
+      - name: Print github
+        run: echo "${{toJson(github)}}"
       - name: Print string input
         run: echo "${{inputs.hello}}"
