--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -45,6 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print github
-        run: echo "${{toJson(github)}}"
+        run: echo "${{toJson(github.event.sender)}}"
       - name: Print string input
+        if: ${{github.event.sender.login}} == "leducduy520"
         run: echo "${{inputs.hello}}"
