--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -47,5 +47,5 @@ jobs:
       - name: Print github
         run: echo "${{toJson(github.event.sender)}}"
       - name: Print string input
-        if: ${{github.event.sender.login}} == "leducduy520"
+        if: ${{github.event.sender.login == 'leducduy520'}}
         run: echo "${{inputs.hello}}"
