try new features of inputs context

--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -1,4 +1,4 @@
-name: Outputs test
+name: GitHub actions features
 on:
   workflow_dispatch:
     inputs:
@@ -7,6 +7,14 @@ on:
         required: true
         default: "duyld"
         type: string
+      enable_print:
+        description: "Enable show point"
+        required: true
+        type: boolean
+      additional_info:
+        description: "Additional informations for printing"
+        required: false
+        type: environment
 env:
   WORKFLOW_ENV: duyleduc520
 jobs:
@@ -49,3 +57,6 @@ jobs:
       - name: Print string input
         if: ${{github.event.sender.login == 'leducduy520'}}
         run: echo "${{inputs.hello}}"
+      - name: Print point
+        if: ${{inputs.enable_print}}
+        run: echo "The point is 10 and ${{inputs.additional_info}}"
