--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -11,7 +11,7 @@ on:
         description: "Enable show point"
         required: true
         type: boolean
-      additional_info:
+      work_environment:
         description: "Additional informations for printing"
         required: false
         type: environment
@@ -51,6 +51,7 @@ jobs:
         run: echo "${{secrets.TEST_SECRET}}"
   If-and-Input:
     runs-on: ubuntu-latest
+    environment: ${{inputs.work_environment}}
     steps:
       - name: Print github
         run: echo "${{toJson(github.event.sender)}}"
@@ -59,4 +60,13 @@ jobs:
         run: echo "${{inputs.hello}}"
       - name: Print point
         if: ${{inputs.enable_print}}
-        run: echo "The point is 10 and ${{inputs.additional_info}}"
+        run: echo "The point is 10 in the environment ${{inputs.work_environment}}"
+  Test-Strategy:
+    strategy:
+      matrix:
+        version: [10, 11, 12]
+        os: [ubuntu, windows, mac]
+    runs-on: ${{matrix.os}}
+    steps:
+      - name: Run matrix
+        run: echo "this app version ${{matrix.version}} run on os ${{matrix.os}}"
