--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Print
         run: echo "${{secrets.TEST_SECRET}}"
   If-and-Input:
-    continue-on-error: true
+    #continue-on-error: true
     runs-on: ubuntu-latest
     environment: ${{inputs.work_environment}}
     steps:
@@ -67,7 +67,7 @@ jobs:
       matrix:
         version: [10, 11, 12]
         os: [ubuntu, windows, mac]
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     steps:
       - name: Run matrix
         run: echo "this app version ${{matrix.version}} run on os ${{matrix.os}}"
