--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Print
         run: echo "${{secrets.TEST_SECRET}}"
   If-and-Input:
+    continue-on-error: true
     runs-on: ubuntu-latest
     environment: ${{inputs.work_environment}}
     steps:
