--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -20,6 +20,8 @@ env:
 jobs:
   Create-Output:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     outputs:
       duylove: ${{steps.save.outputs.mylove}}
     steps:
@@ -61,6 +63,8 @@ jobs:
         if: ${{inputs.enable_print}}
         run: echo "The point is 10 in the environment ${{inputs.work_environment}}"
   Test-Strategy:
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     strategy:
       matrix:
         version: [10, 11, 12]
