--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,17 @@
             "strings": true
         }
     },
+    "[yaml]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 2,
+        "editor.autoIndent": "keep",
+        "diffEditor.ignoreTrimWhitespace": false,
+        "editor.quickSuggestions": {
+            "other": true,
+            "comments": false,
+            "strings": true
+        }
+    },
     "files.associations": {
         "memory": "cpp"
     }
