--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -6,6 +6,18 @@ jobs:
   Configuration:
     runs-on: windows-latest
     steps:
+      - name: install graphviz
+        run: choco install graphviz
+      - name: install ninja
+        run: choco install ninja
+      - name: install make
+        run: choco install make
+      - name: install dos2unix
+        run: choco install dos2unix
+      - name: install cmake-format
+        run: |
+          pip install cmake-format
+          pip install PyYAML
       - name: Checkout
         uses: actions/checkout@v3
       - name: Check folder
