--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,3 +22,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Check folder
         run: ls
+      - name: Configure
+        run: make config-win
