--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,6 +14,8 @@ jobs:
         run: choco install make
       - name: install dos2unix
         run: choco install dos2unix
+      - name: install doxygen
+        run: choco install doxygen.install
       - name: install cmake-format
         run: |
           pip install cmake-format
